e2e/tests/all/snapshots/table_wide_rest_desktop.snap
---
source: e2e/src/suite.rs
description: table_wide at desktop (rest)
expression: tree
---
table "Fruit catalogue"
  caption
    StaticText "Fruit catalogue"
  rowgroup
    row
      columnheader "Name"
        button "Name"
          StaticText "Name"
      columnheader "Origin"
        button "Origin"
          StaticText "Origin"
      columnheader "Season"
        button "Season"
          StaticText "Season"
      columnheader "Colour"
        button "Colour"
          StaticText "Colour"
      columnheader "Taste"
        button "Taste"
          StaticText "Taste"
      columnheader "Storage"
        button "Storage"
          StaticText "Storage"
      columnheader "Price"
        button "Price"
          StaticText "Price"
      columnheader "Supplier"
        button "Supplier"
          StaticText "Supplier"
  row
    cell "Cherry_Name_description"
      StaticText "Cherry_Name_description"
    cell "Cherry_Origin_description"
      StaticText "Cherry_Origin_description"
    cell "Cherry_Season_description"
      StaticText "Cherry_Season_description"
    cell "Cherry_Colour_description"
      StaticText "Cherry_Colour_description"
    cell "Cherry_Taste_description"
      StaticText "Cherry_Taste_description"
    cell "Cherry_Storage_description"
      StaticText "Cherry_Storage_description"
    cell "Cherry_Price_description"
      StaticText "Cherry_Price_description"
    cell "Cherry_Supplier_description"
      StaticText "Cherry_Supplier_description"
  row
    cell "Apple_Name_description"
      StaticText "Apple_Name_description"
    cell "Apple_Origin_description"
      StaticText "Apple_Origin_description"
    cell "Apple_Season_description"
      StaticText "Apple_Season_description"
    cell "Apple_Colour_description"
      StaticText "Apple_Colour_description"
    cell "Apple_Taste_description"
      StaticText "Apple_Taste_description"
    cell "Apple_Storage_description"
      StaticText "Apple_Storage_description"
    cell "Apple_Price_description"
      StaticText "Apple_Price_description"
    cell "Apple_Supplier_description"
      StaticText "Apple_Supplier_description"
  row
    cell "Banana_Name_description"
      StaticText "Banana_Name_description"
    cell "Banana_Origin_description"
      StaticText "Banana_Origin_description"
    cell "Banana_Season_description"
      StaticText "Banana_Season_description"
    cell "Banana_Colour_description"
      StaticText "Banana_Colour_description"
    cell "Banana_Taste_description"
      StaticText "Banana_Taste_description"
    cell "Banana_Storage_description"
      StaticText "Banana_Storage_description"
    cell "Banana_Price_description"
      StaticText "Banana_Price_description"
    cell "Banana_Supplier_description"
      StaticText "Banana_Supplier_description"
