e2e/tests/all/snapshots/tabs_rest_mobile.snap
---
source: e2e/src/suite.rs
description: tabs at mobile (rest)
expression: tree
---
tablist "Settings"
  tab "Account" [selected]
    StaticText "Account"
  tab "Billing" [selected=false]
    StaticText "Billing"
  tab "Admin" [selected=false]
    StaticText "Admin"
tabpanel "Account"
  paragraph
    StaticText "panel for Account"
--> aria-controls [id="lsx-N-panel-0"] (rendered above)
