e2e/tests/all/snapshots/tabs_second_mobile.snap
---
source: e2e/src/suite.rs
description: tabs at mobile (second)
expression: tree
---
tablist
  tab "Account" [selected=false]
    StaticText "Account"
  tab "Billing" [selected]
    StaticText "Billing"
  tab "Admin" [selected=false]
    StaticText "Admin"
tabpanel "Billing"
  paragraph
    StaticText "panel for Billing"
--> aria-controls [id="lsx-N-panel-1"] (rendered above)
