e2e/tests/all/snapshots/text_field_rest_desktop.snap
---
source: e2e/src/suite.rs
description: text_field at desktop (rest)
expression: tree
---
LabelText
  StaticText "Username"
StaticText "How other people see you."
textbox "Username" = ada [invalid] [required]
  description "Shown on your profile. How other people see you. Letters and digits. That name is taken."
  StaticText "ada"
StaticText "Letters and digits."
StaticText "That name is taken."
StaticText "Shown on your profile."
LabelText
  StaticText "Handle"
StaticText "@"
textbox "Handle" = ada
  StaticText "ada"
StaticText "3/20"
LabelText
  StaticText "Email"
textbox "Email" [invalid]
  description "Email needed"
StaticText "Email needed"
LabelText
  StaticText "Password"
textbox "Password"
  description "At least 8 characters."
button "Show password" [pressed=false]
StaticText "At least 8 characters."
LabelText
  StaticText "PIN"
textbox "PIN"
button "Show password" [pressed=false]
group "Locked"
  Legend
    StaticText "Locked"
  LabelText
    StaticText "Old password"
  textbox "Old password" [disabled]
  button "Show password" [disabled] [pressed=false]
LabelText
  StaticText "Bio"
textbox "Bio" [required]
  description "Markdown works."
StaticText "Markdown works."
