e2e/tests/all/snapshots/text_field_rest_mobile.snap
---
source: e2e/src/suite.rs
description: text_field at mobile (rest)
expression: tree
---
LabelText
  StaticText "Username"
StaticText "How other people see you."
textbox "Username" = ada [invalid] [required]
  StaticText "ada"
StaticText "Letters and digits."
StaticText "That name is taken."
StaticText "Shown on your profile."
LabelText
  StaticText "Handle"
StaticText "@"
textbox "Handle" = ada
  StaticText "ada"
StaticText "3/20"
LabelText
  StaticText "Email"
textbox "Email" [invalid]
StaticText "Email needed"
LabelText
  StaticText "Password"
textbox "Password"
button "Show password" [pressed=false]
StaticText "At least 8 characters."
LabelText
  StaticText "PIN"
textbox "PIN"
button "Show password" [pressed=false]
group "Locked"
  Legend
    StaticText "Locked"
  LabelText
    StaticText "Old password"
  textbox "Old password" [disabled]
  button "Show password" [disabled] [pressed=false]
LabelText
  StaticText "Bio"
textbox "Bio" [required]
StaticText "Markdown works."
